# gpg-lib

./: CMakeLists.txt  c_gpgme.cpp  c_gpgme.hpp  main.cpp
test/: CMakeLists.txt  c_gpgme_test.cpp
test/detached_sig/: file0  file0.sig  file1  file1.sig  file10  file10.sig  file11  file11.sig  file12  file12.sig  file13  file13.sig  file14  file14.sig  file15  file15.sig  file16  file16.sig  file17  file17.sig  file18  file18.sig  file19  file19.sig  file2  file2.sig  file20  file20.sig  file21  file21.sig  file22  file22.sig  file23  file23.sig  file24  file24.sig  file25  file25.sig  file26  file26.sig  (+161 more)
